[tool.poetry]
name = "drivein"
version = "0.1.0"
description = ""
authors = ["Bùi Thành Nhân <hi@imnhan.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
pyqt5 = "^5.13"

[tool.poetry.dev-dependencies]
isort = "^4.3"
python-language-server = "^0.29.1"
flake8 = "^3.7"
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
